# machine_learning

./: dataset.csv  pyproject.toml
machine_learning/: main.ipynb  main.py
