[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["unworthyEnzyme <unworthy_enzyme@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.5"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
